crates/etch-core/tests/snapshots/corpus_tests__core-footnotes-basic.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The old station still keeps a brass clock above the ticket window."
          },
          {
            "type": "FootnoteReference",
            "label": "1"
          }
        ]
      },
      {
        "type": "FootnoteDefinition",
        "label": "1",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The clock was installed in 1912 and still runs by hand."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
