crates/etch-core/tests/snapshots/corpus_tests__core-hard-line-breaks-backslash.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "123 Main Street"
          },
          {
            "type": "HardBreak"
          },
          {
            "type": "Text",
            "value": "Apartment 4B"
          },
          {
            "type": "HardBreak"
          },
          {
            "type": "Text",
            "value": "New York, NY 10001"
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Pack wool socks"
          },
          {
            "type": "HardBreak"
          },
          {
            "type": "Text",
            "value": "Pack a dry scarf"
          },
          {
            "type": "HardBreak"
          },
          {
            "type": "Text",
            "value": "Pack the paper map"
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "First line of the note"
          },
          {
            "type": "HardBreak"
          },
          {
            "type": "Text",
            "value": "Second line of the note"
          },
          {
            "type": "HardBreak"
          },
          {
            "type": "Text",
            "value": "Final line of the note"
          }
        ]
      }
    ]
  },
  "errors": []
}
