crates/etch-core/tests/snapshots/corpus_tests__core-hard-line-breaks-in-blockquote.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockQuote",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The snow started before dawn"
              },
              {
                "type": "HardBreak"
              },
              {
                "type": "Text",
                "value": "and kept falling through breakfast"
              },
              {
                "type": "HardBreak"
              },
              {
                "type": "Text",
                "value": "until the road signs disappeared."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
