crates/etch-core/tests/snapshots/corpus_tests__core-hard-line-breaks-in-list.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "List",
        "ordered": false,
        "items": [
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Shipping address:"
                  },
                  {
                    "type": "HardBreak"
                  },
                  {
                    "type": "Text",
                    "value": "Apartment 4B"
                  },
                  {
                    "type": "HardBreak"
                  },
                  {
                    "type": "Text",
                    "value": "123 Main Street"
                  }
                ]
              }
            ]
          },
          {
            "content": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Pack the signed permit"
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
