crates/etch-core/tests/snapshots/corpus_tests__core-hard-line-breaks-two-spaces-no-break.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "These lines end with two trailing spaces.  "
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "They should still stay in one paragraph.  "
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "No hard break is created unless a backslash ends the line."
          }
        ]
      }
    ]
  },
  "errors": []
}
